# weather-live

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_environment.sh
.github/workflows/: pages.yml
docs/: app.js  index.html  styles.css
scripts/: verify_environment.py
