[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphcast-forecasting-setup"
version = "0.1.0"
description = "Utilities and configuration for GraphCast weather forecasting workflows"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "xarray",
    "jax"
]
